# chess-anywhere

./: .env.example  .envrc  Cargo.toml  README.md  default.nix  docker-dev.yml  flake.nix  rust-toolchain.toml
backend/: Cargo.toml  README.md
backend/migrations/: 20240627094253_init_db.sql
backend/src/: chess.rs  lib.rs  users.rs
backend/src/auth/: mod.rs
backend/src/chess/: mod.rs
backend/src/discord/: drawer.rs  mod.rs
backend/src/users/: board_drawing.rs  mod.rs
discord/: Cargo.toml  README.md
discord/src/: error.rs  lib.rs  move_piece.rs  new_game.rs
migrations/: 20240627094253_init_db.sql  20240701102831_emails.sql  20240701102831_jwt.sql  20240701140237_discord_id_table.sql  20240702111242_email_in_verification_table.sql  20240702130908_used_field_in_verification.sql  20240705163453_games_and_moves.sql
server/: Cargo.toml  README.md
server/src/: env.rs  main.rs
src/: env.rs  main.rs  users.rs
src/api/: auth.rs  error.rs  game.rs  mod.rs  routes.rs  session.rs  user.rs
src/api/oauth/: discord.rs
src/backend/: chess.rs  mod.rs  players.rs  users.rs
src/discord/: account.rs  board.rs  error.rs  link.rs  mod.rs  move_piece.rs  new_game.rs
