[workspace]
members = ["discord", "backend", "server"]
resolver = "2"

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
error-stack = { version = "0.4.1", features = ["spantrace", "serde"] }
shakmaty = "0.27.0"
poise = "0.6.1"
tracing = "0.1.40"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
tokio = { version = "1.38.0", features = ["full"] }

[profile.dev.package.sqlx-macros]
opt-level = 3
