[package]
name = "backend"
edition = "2021"
version = "0.1.0"

[dependencies]
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "bigdecimal",
] }
replace_with = "0.1.7"
arrayvec = { version = "0.7.4", features = ["serde"] }
dashmap = "6.0.1"
uuid = { version = "1.9.1", features = ["v4"] }
skillratings = "0.27.0"
error-stack = { version = "0.4.1", features = ["spantrace", "serde"] }
shakmaty = "0.27.0"
poise = "0.6.1"
tracing = "0.1.40"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
tokio = { version = "1.38.0", features = ["full"] }
dotenvy = "0.15.7"
menv = "0.2.7"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
rand = "0.8.5"

[profile.dev.package.sqlx-macros]
opt-level = 3
