[package]
name = "chess-anywhere"
edition = "2021"
version = "0.1.0"

[dependencies]
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "sqlite"] }
replace_with = "0.1.7"
arrayvec = { version = "0.7.4", features = ["serde"] }
dashmap = "6.0.1"
skillratings = "0.27.0"
error-stack = { version = "0.4.1", features = ["spantrace", "serde"] }
shakmaty = "0.27.0"
poise = "0.6.1"
tracing = "0.1.40"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
tokio = { version = "1.38.0", features = ["full"] }
dotenvy = "0.15.7"
menv = "0.2.7"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
rand = "0.8.5"
veil = "0.1.7"
resend-rs = { version = "0.7.0", default-features = false, features = [
    "rustls-tls",
] }
axum = { version = "0.7.5", features = ["http2", "json"] }
tower-sessions = "0.12.2"
tower-sessions-sqlx-store = { version = "0.12.0", features = ["sqlite"] }
tower-http = { version = "0.5.2", features = ["trace", "tracing"] }
axum-login = "0.15.3"
time = "0.3.36"
base64 = "0.22.1"

[profile.dev.package.sqlx-macros]
opt-level = 3
