[package]
name = "backend"
edition = "2021"
version.workspace = true

[dependencies]
error-stack.workspace = true
shakmaty.workspace = true
poise.workspace = true
tokio.workspace = true
tracing.workspace = true
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "bigdecimal",
] }
replace_with = "0.1.7"
arrayvec = { version = "0.7.4", features = ["serde"] }
dashmap = "6.0.1"
uuid = { version = "1.9.1", features = ["v4"] }
skillratings = "0.27.0"
